--- a/index.html
+++ b/index.html
@@ -353,6 +353,15 @@
     </div>
 
 
+         <!-- Slide 11 -->
+    <div class="produto-slide fade">
+      <a href="https://linhadotempoguarapari.netlify.app/" target="_blank">
+        <img src="produto.jpeg" alt="Produto 7" />
+        <p class="caption">“Aluguel temporada: Cobertura de frente para a praia em Guarapari!”</p>
+      </a>
+    </div>
+
+
 
     <!-- Botões -->
     <a class="prev" onclick="moveProdutoSlide(-1)">❮</a>
