--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
          <!-- Slide 11 -->
     <div class="produto-slide fade">
       <a href="https://linhadotempoguarapari.netlify.app/" target="_blank">
-        <img src="produto.jpeg" alt="Produto 7" />
+        <img src="produt" alt="Produto 7" />
         <p class="caption">“Aluguel temporada: Cobertura de frente para a praia em Guarapari!”</p>
       </a>
     </div>
