--- a/index.html
+++ b/index.html
@@ -421,6 +421,41 @@
 
 
     <!-- Notícias de Vitória -->
+
+<div class="timeline-item">
+  <div class="timeline-date">2025</div>
+  <div class="city-name">Grande Vitória</div>
+  <div class="timeline-content">
+    <ul>
+      <li>Operação Eclipse da Polícia Civil prende 9 pessoas por envolvimento com drogas "gourmet" como haxixe e pak em Vitória, Vila Velha, Serra, Cariacica e Viana, cumprindo 12 mandados de prisão e 23 de busca e apreensão. :contentReference[oaicite:1]{index=1}</li>
+      <li>Investigação revela que o "pak" apreendido, droga sofisticada tipo haxixe, vem do Paquistão e pode custar até R$ 200 o grama. :contentReference[oaicite:2]{index=2}</li>
+      <li>Operação Eclipse mira PCP da Penha, facção que recebia drogas gourmet na Grande Vitória. :contentReference[oaicite:3]{index=3}</li>
+      <li>Operação da Polícia Civil contra tráfico e homicídios na Ilha das Caieiras e Grande Vitória prende quatro homens e três mulheres; apreende cocaína, crack, haxixe, maconha, simulacros e balança. :contentReference[oaicite:4]{index=4}</li>
+      <li>Em operação no início de abril, quatro pessoas (incluindo um adolescente) são presas em bairro de Vitória, com 1.462 pinos de cocaína e outros entorpecentes apreendidos. :contentReference[oaicite:5]{index=5}</li>
+      <li>Operação Eclipse da DHPP prende três homens e apreende um adolescente no bairro Grande Vitória, com apreensão de drogas e material para tráfico. :contentReference[oaicite:6]{index=6}</li>
+      <li>PF e Guarda Civil Municipal apreendem R$ 170 mil e drogas em ação contra organização criminosa em Vila Velha, vinculados a facções e com mandado de prisão. :contentReference[oaicite:7]{index=7}</li>
+      <li>FICCO/ES e PM deflagram Operação Kelpie em Vitória e cumprimento de mandados contra organização criminosa. :contentReference[oaicite:8]{index=8}</li>
+      <li>Operação Vagus da PF cumpre dois mandados de busca e apreensão e um de prisão temporária contra facção envolvida com tráfico interestadual e lavagem de dinheiro na Grande Vitória. :contentReference[oaicite:9]{index=9}</li>
+      <li>Polícia Civil intercepta comunicação entre membros do PCV durante operações Eclipse e Machine Head, identificando planeamento de queima de ônibus e disputas territoriais. :contentReference[oaicite:10]{index=10}</li>
+      <li>Delegado Alan Moreno da Ciat explica que haxixe “pak” é resultado de processo químico que transforma 4 kg de maconha em 1 kg de haxixe. :contentReference[oaicite:11]{index=11}</li>
+      <li>Operação Eclipse envolve apoio da Subsecretaria de Inteligência e Coordenadoria de Operações Especiais da Sesp. :contentReference[oaicite:12]{index=12}</li>
+      <li>Entre os presos na Operação Eclipse, um homem de 34 anos foi detido com uma pistola calibre 9 mm no bairro Fradinhos, Vitória. :contentReference[oaicite:13]{index=13}</li>
+      <li>Mandado no bairro Mata da Serra (Serra) resulta na prisão de um suspeito de 28 anos e apreensão de arma durante operação Eclipse. :contentReference[oaicite:14]{index=14}</li>
+      <li>Investigação da PF identifica fluxo financeiro ilícito em empresas de fachada usadas por organização criminosa no ES. :contentReference[oaicite:15]{index=15}</li>
+      <li>A Operação Kelpie da FICCO/ES visou organizações criminosas em Grande Vitória com apoio do 1º Batalhão da PM de Vitória. :contentReference[oaicite:16]{index=16}</li>
+      <li>Operação com PF e GCM resultou em prisão de suspeito com passaporte em nome de terceiro e R$ 170 mil em espécie, em Vila Velha. :contentReference[oaicite:17]{index=17}</li>
+      <li>Operação DHPP de Vitória, em abril, apreendeu grande quantidade de drogas e celulares em investigações contra tráfico e homicídios. :contentReference[oaicite:18]{index=18}</li>
+      <li>Operação Eclipse executada na madrugada de 14 de março foi coordenada por Ciat, Core, PPES e SEI, resultando em nove prisões. :contentReference[oaicite:19]{index=19}</li>
+      <li>A polícia informou que as operações contra drogas gourmet seguem com novas fases nas cidades da Grande Vitória. :contentReference[oaicite:20]{index=20}</li>
+    </ul>
+  </div>
+</div>
+
+
+
+
+
+
 <div class="timeline-item">
   <div class="timeline-date">2025</div>
   <div class="city-name">Vitória</div>
